// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductAddToBagVanilla should render correctly should call modifiedBannerText 1`] = `
<Fragment>
  <Styled(View)>
    <RichText
      domStorageEnabled={false}
      isApplyDeviceHeight={false}
      isNativeView={false}
      javaScriptEnabled={false}
      source={
        Object {
          "html": "<html><header><meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'> </header><body>PICK UP IN STORE AND SAVE AN EXTRA undefined%</body></html>",
        }
      }
      thirdPartyCookiesEnabled={false}
    />
  </Styled(View)>
</Fragment>
`;

exports[`ProductAddToBagVanilla should render correctly should match snapshot 1`] = `
<Fragment>
  <Styled(View)>
    <Styled(View) />
    <Styled(View)>
      <RichText
        domStorageEnabled={false}
        isApplyDeviceHeight={false}
        isNativeView={false}
        javaScriptEnabled={false}
        source={
          Object {
            "html": "<html><header><meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'> </header><body>EXTRA undefined% OFF</body></html>",
          }
        }
        thirdPartyCookiesEnabled={false}
      />
    </Styled(View)>
  </Styled(View)>
</Fragment>
`;
